--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.9.1",
+    "aws-amplify": "^6.12.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.0.0",
-    "aws-amplify": "^5.0.0",
-    "@aws-amplify/ui-react": "^3.0.0"
+    "react-router-dom": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
