--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  }
+  "start": "yarn react-scripts start",
+  "build": "yarn react-scripts build",
+  "test": "yarn react-scripts test",
+  "eject": "yarn react-scripts eject"
+}
 }
