--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-amplify": "4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
@@ -14,5 +15,17 @@
     "build": "yarn react-scripts build",
     "test": "yarn react-scripts test",
     "eject": "yarn react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
